--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -57,4 +57,7 @@
         <item>Imagini de fundal</item>
         <item>Efecte</item>
      </string-array>
+    <string-array name="quality_business_devices">
+        <item>litiu</item>
+    </string-array>
 </resources>
