--- a/Romanian/main/Browser.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/plurals.xml
@@ -19,6 +19,10 @@
         <item quantity="other">%1$d videoclipuri eliminate.</item>
         <item quantity="one">%1$d videoclip eliminat.</item>
     </plurals>
+    <plurals name="video_subtitle_last_message">
+        <item quantity="other">Menține %d minute</item>
+        <item quantity="one">Menține un minut</item>
+    </plurals>
     <plurals name="video_history_clear_prompt">
         <item quantity="other">Ștergeți %1$d elemente din istoric?</item>
         <item quantity="one">Ștergeți %1$d element din istoric?</item>
