--- a/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
@@ -45,6 +45,14 @@
         <item quantity="other">%d grupe</item>
         <item quantity="one">%d grup</item>
     </plurals>
+    <plurals name="dialog_content_delete_image_confirm">
+        <item quantity="other">Ștergeți %d fotografii?</item>
+        <item quantity="one">Ștergeți %d fotografie?</item>
+    </plurals>
+    <plurals name="dialog_content_delete_image_from_all_devices_confirm">
+        <item quantity="other">Ștergeți %1$s fotografii de pe toate dispozitivele ?</item>
+        <item quantity="one">Ștergeți %1$s fotografie de pe toate dispozitivele ?</item>
+    </plurals>
     <plurals name="deepclean_cache_summary">
         <item quantity="other">Puteți șterge date irelevante pentru %d aplicații</item>
         <item quantity="one">Puteți șterge datele irelevante pentru %d aplicație</item>
@@ -68,5 +76,9 @@
     <plurals name="deepclean_video_summary">
         <item quantity="other">Au fost găsite %d videoclipuri; le puteți șterge pe cele inutile.​</item>
         <item quantity="one">A fost găsit un videoclip care poate fi șters.</item>
+    </plurals>
+    <plurals name="deepclean_install_info_desc1">
+        <item quantity="other">%d aplicații instalate</item>
+        <item quantity="one">%d aplicație instalată</item>
     </plurals>
 </resources>
