--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -58,6 +58,6 @@
         <item>Efecte</item>
      </string-array>
     <string-array name="quality_business_devices">
-        <item>litiu</item>
+        <item>Litiu</item>
     </string-array>
 </resources>
