--- a/Romanian/main/Browser.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/plurals.xml
@@ -20,8 +20,8 @@
         <item quantity="one">%1$d videoclip eliminat.</item>
     </plurals>
     <plurals name="video_subtitle_last_message">
-        <item quantity="other">Menține %d minute</item>
-        <item quantity="one">Menține un minut</item>
+        <item quantity="other">%d minute rămase</item>
+        <item quantity="one">1 minut rămas</item>
     </plurals>
     <plurals name="video_history_clear_prompt">
         <item quantity="other">Ștergeți %1$d elemente din istoric?</item>
