--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -296,4 +296,12 @@
         <item quantity="few">%1$s urmăritori</item>
         <item quantity="many">%1$s urmăritori</item>
     </plurals>
+    <plurals name="number_of_comment_flow">
+        <item quantity="other">%1$s comentarii</item>
+        <item quantity="one">%1$s comentariu</item>
+    </plurals>
+    <plurals name="user_sign_limt">
+        <item quantity="other">Puteți introduce %d caractere</item>
+        <item quantity="one">Puteți introduce %d caracter</item>
+    </plurals>
 </resources>
