--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -638,6 +638,11 @@
         <item>1,5 secunde</item>
         <item>2 secunde</item>
      </string-array>
+    <string-array name="long_press_volume_down_action">
+        <item>Niciuna</item>
+        <item>Street-snap(trebuie selectat modul Camerei)</item>
+        <item>Scurtătură transport public</item>
+    </string-array>
     <string-array name="button_light_timeout_entries">
         <item>1 secundă</item>
         <item>2 secunde</item>
