--- a/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
@@ -9,6 +9,18 @@
         <item>Voce</item>
         <item>Interviu</item>
     </string-array>
+    <string-array name="hd_record_scenes_entries">
+        <item>Muzică</item>
+        <item>Voce</item>
+        <item>Interviu</item>
+        <item>HD</item>
+    </string-array>
+    <string-array name="record_scenes_summaries">
+        <item>Înregistrare pe 2 canale, redare stereo în căști</item>
+        <item>"Apropiați microfonul de sursă pentru a obține rezultate mai bune"</item>
+        <item>Plasați telefonul între 2 persoane pentru a înregistra clar vocea amândurora</item>
+        <item>Distanța maximă la care se poate afla difuzorul este de 10 metri</item>
+    </string-array>
     <string-array name="record_quality_entries">
         <item>Înaltă</item>
         <item>Standard</item>
