--- a/Romanian/main/Settings.apk/res/xml-ro/timezones.xml
+++ b/Romanian/main/Settings.apk/res/xml-ro/timezones.xml
@@ -31,7 +31,7 @@
     <timezone id="Africa/Casablanca">Casablanca</timezone>
     <timezone id="Europe/London">Greenwich Mean Time (Londra)</timezone>
     <timezone id="Europe/Amsterdam">Ora Europei Centrale (Amsterdam)</timezone>
-    <timezone id="Europe/Belgrade">Ora Europei Centrale (Belgrade)</timezone>
+    <timezone id="Europe/Belgrade">Ora Europei Centrale (Belgrad)</timezone>
     <timezone id="Europe/Brussels">Ora Europei Centrale (Bruxelles)</timezone>
     <timezone id="Europe/Sarajevo">Ora Europei Centrale (Sarajevo)</timezone>
     <timezone id="Africa/Windhoek">Windhoek</timezone>
