--- a/Romanian/main/DeskClock.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/plurals.xml
@@ -5,8 +5,8 @@
         <item quantity="one">"%1$d oră "</item>
     </plurals>
     <plurals name="timer_message_minute">
-        <item quantity="other">%1$d minute</item>
-        <item quantity="one">%1$d minut</item>
+        <item quantity="other">"%1$d minute "</item>
+        <item quantity="one">"%1$d minut "</item>
     </plurals>
     <plurals name="timer_message_second">
         <item quantity="other">%1$d secunde</item>
