--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -640,8 +640,8 @@
      </string-array>
     <string-array name="long_press_volume_down_action">
         <item>Niciuna</item>
-        <item>Street-snap(trebuie selectat modul Camerei)</item>
-        <item>Scurtătură transport public</item>
+        <item>Fotografie rapidă(activați în Cameră)</item>
+        <item>Scurtătură cartelă transport public</item>
     </string-array>
     <string-array name="button_light_timeout_entries">
         <item>1 secundă</item>
