--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -640,8 +640,8 @@
      </string-array>
     <string-array name="long_press_volume_down_action">
         <item>Niciuna</item>
-        <item>Fotografie rapidă(activați în Cameră)</item>
-        <item>Scurtătură cartelă transport public</item>
+        <item>Fotografie rapidă(trebuie selectat modul din aplicația Cameră)</item>
+        <item>Scurtături transport public</item>
     </string-array>
     <string-array name="button_light_timeout_entries">
         <item>1 secundă</item>
@@ -839,5 +839,13 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
         <item>În fiecare zi</item>
         <item>În zilele săptămânii</item>
         <item>Personalizată</item>
+    </string-array>
+    <string-array name="privacy_password_function_specfication_names">
+        <item>Mesaje</item>
+        <item>Fotografii</item>
+        <item>Fișiere</item>
+        <item>Notițe</item>
+        <item>Blocarea aplicațiilor</item>
+        <item>Modul Copil</item>
     </string-array>
 </resources>
