Revert "Fix untranslatable strings"
This reverts commit dee41c08cdc0e91f4aaa8ffd8a3f5e9355120c8f.

--- a/Romanian/main/InCallUI.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/arrays.xml
@@ -18,7 +18,7 @@
         <item>3G/2G(mod automat)</item>
         <item>Numai 2G</item>
     </string-array>
-<!--<string-array name="language_list_values">
+    <string-array name="language_list_values">
         <item>Toate limbile</item>
         <item>Germană</item>
         <item>Engleză</item>
@@ -41,7 +41,7 @@
         <item>Arabă</item>
         <item>Rusă</item>
         <item>Islandeză</item>
-    </string-array>-->
+    </string-array>
     <string-array name="plmn_prefer_network_type_choices">
         <item>2G</item>
         <item>3G</item>
