--- a/Romanian/main/EngineerMode.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/EngineerMode.apk/res/values-ro/arrays.xml
@@ -433,20 +433,20 @@
     <string-array name="auto_calib_capture">
         <item>Start previzualizare</item>
     </string-array>
-<!--<string-array name="auto_calib_on_off_value">
+    <string-array name="auto_calib_on_off_value">
         <item>OPRIT</item>
         <item>PORNIT</item>
-    </string-array>-->
-<!--<string-array name="multi_pass_nr_value">
+    </string-array>
+    <string-array name="multi_pass_nr_value">
         <item>Auto</item>
         <item>Dezactivat</item>
         <item>HWNR</item>
         <item>SWNR</item>
-    </string-array>-->
-<!--<string-array name="pref_camera_focusmode_default_array">
+    </string-array>
+    <string-array name="pref_camera_focusmode_default_array">
         <item>fotografiere continuă</item>
         <item>auto</item>
-    </string-array>-->
+    </string-array>
     <string-array name="desense_camera_items">
         <item>2 mA</item>
         <item>4 mA</item>
