--- a/Romanian/main/Mipub.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Mipub.apk/res/values-ro/arrays.xml
@@ -7,19 +7,19 @@
         <item>de 5 ori</item>
         <item>de 10 ori</item>
     </string-array>
-<!--<string-array name="prefValues_ringtone_repeat">
+    <string-array name="prefValues_ringtone_repeat">
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>5</item>
         <item>10</item>
-    </string-array>-->
+    </string-array>
     <string-array name="entries_date_type">
         <item>Recepționate</item>
         <item>Trimise</item>
     </string-array>
-<!--<string-array name="entryvalues_date_type">
+    <string-array name="entryvalues_date_type">
         <item>0</item>
         <item>1</item>
-    </string-array>-->
+    </string-array>
 </resources>
