--- a/Romanian/main/TeleService.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/arrays.xml
@@ -14,11 +14,11 @@
         <item>Doar 3G</item>
         <item>Doar 2G</item>
      </string-array>
-<!--<string-array name="clir_display_values">
+    <string-array name="clir_display_values">
         <item>Prestabilit de reţea</item>
         <item>Ascundeţi numărul</item>
         <item>Afişaţi numărul</item>
-     </string-array>-->
+     </string-array>
     <string-array name="preferred_network_mode_choices">
         <item>LTE/WCDMA</item>
         <item>LTE</item>
