--- a/Romanian/main/XMRemoteController.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/arrays.xml
@@ -46,7 +46,7 @@
         <item>Canale HD</item>
         <item>Recent vizionat</item>
     </string-array>
-<!--<string-array name="epg_default_hot_channels">
+    <string-array name="epg_default_hot_channels">
         <item>TV Hunan</item>
         <item>CCTV-6</item>
         <item>TV prin satelit Zhejiang</item>
@@ -56,7 +56,7 @@
         <item>Anhui TV</item>
         <item>Beijing TV</item>
         <item>Guangdong TV</item>
-    </string-array>-->
+    </string-array>
     <string-array name="passport_alphabet_table">
         <item>\#</item>
         <item>A</item>
