--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -240,14 +240,6 @@
         <item quantity="few">videoclipuri</item>
         <item quantity="many">videoclipuri</item>
     </plurals>
-    <plurals name="user_follow_me_items">
-        <item quantity="other">urmăritori</item>
-        <item quantity="zero">urmăritori</item>
-        <item quantity="one">urmăritor</item>
-        <item quantity="two">urmăritori</item>
-        <item quantity="few">urmăritori</item>
-        <item quantity="many">urmăritori</item>
-    </plurals>
     <plurals name="number_of_comment">
         <item quantity="other">%1$s comentarii</item>
         <item quantity="zero">%1$s comentarii</item>
@@ -264,14 +256,6 @@
         <item quantity="few">%1$s videoclipuri</item>
         <item quantity="many">%1$s videoclipuri</item>
     </plurals>
-    <plurals name="follow_count">
-        <item quantity="other">%1$s urmăritori</item>
-        <item quantity="zero">%1$s urmăritori</item>
-        <item quantity="one">%1$s urmăritor</item>
-        <item quantity="two">%1$s urmăritori</item>
-        <item quantity="few">%1$s urmăritori</item>
-        <item quantity="many">%1$s urmăritori</item>
-    </plurals>
     <plurals name="number_of_comment_flow">
         <item quantity="other">%1$s comentarii</item>
         <item quantity="one">%1$s comentariu</item>
@@ -279,5 +263,13 @@
     <plurals name="user_sign_limt">
         <item quantity="other">Puteți introduce %d caractere</item>
         <item quantity="one">Puteți introduce %d caracter</item>
+    </plurals>
+    <plurals name="video_items">
+        <item quantity="other"> %1$d elemente</item>
+        <item quantity="zero"> %1$d elemente</item>
+        <item quantity="one"> %1$d element</item>
+        <item quantity="two"> %1$d elemente</item>
+        <item quantity="few"> %1$d elemente</item>
+        <item quantity="many"> %1$d elemente</item>
     </plurals>
 </resources>
