--- a/Romanian/main/Notes.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/arrays.xml
@@ -8,6 +8,10 @@
         <item>Cameră</item>
         <item>Galerie</item>
     </string-array>
+    <string-array name="note_sort_way">
+        <item>Sortare după data creării</item>
+        <item>Sortare după data ultimei modificări</item>
+    </string-array>
     <string-array name="contact_entries">
         <item>Nume</item>
         <item>Pseudonim</item>
