--- a/Romanian/main/SecurityCenter.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/arrays.xml
@@ -76,6 +76,9 @@
         <item>Blochează după ieșirea din aplicație</item>
         <item>Blochează după un minut de la părăsirea aplicației</item>
     </string-array>
+    <string-array name="long_add_menu">
+        <item>Adăugați în lista excepțiilor</item>
+    </string-array>
     <string-array name="power_dialog_auto_clean_memory_items">
         <item>După un minut</item>
         <item>După 5 minute</item>
