--- a/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/arrays.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="record_type_entries">
+        <item>MP3</item>
+        <item>AMR</item>
+    </string-array>
     <string-array name="record_scenes_entries">
         <item>Muzică</item>
         <item>Voce</item>
@@ -19,7 +23,7 @@
         <item>Înregistrare pe 2 canale, redare stereo în căști</item>
         <item>"Apropiați microfonul de sursă pentru a obține rezultate mai bune"</item>
         <item>Plasați telefonul între 2 persoane pentru a înregistra clar vocea amândurora</item>
-        <item>Distanța maximă la care se poate afla difuzorul este de 10 metri</item>
+        <item>Tehnologia High Dynamic Range permite captarea mult mai fidelă a sunetului</item>
     </string-array>
     <string-array name="record_quality_entries">
         <item>Înaltă</item>
