--- a/Romanian/main/CloudService.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/plurals.xml
@@ -16,4 +16,32 @@
         <item quantity="other">%d fotografii</item>
         <item quantity="one">%d fotografie</item>
     </plurals>
+    <plurals name="dirty_callog_count">
+        <item quantity="other">%d apeluri înregistrate</item>
+        <item quantity="one">%d apel înregistrat</item>
+    </plurals>
+    <plurals name="dirty_wlan_count">
+        <item quantity="other">%d rețele Wi-Fi</item>
+        <item quantity="one">%d rețea Wi-Fi</item>
+    </plurals>
+    <plurals name="dirty_recorder_count">
+        <item quantity="other">%d înregistrări</item>
+        <item quantity="one">%d înregistrare</item>
+    </plurals>
+    <plurals name="dirty_music_count">
+        <item quantity="other">%d melodii</item>
+        <item quantity="one">%d melodie</item>
+    </plurals>
+    <plurals name="dirty_browser_count">
+        <item quantity="other">%d elemente din browser</item>
+        <item quantity="one">%d element din browser</item>
+    </plurals>
+    <plurals name="dirty_calendar_count">
+        <item quantity="other">%d elemente din calendar</item>
+        <item quantity="one">%d element din calendar</item>
+    </plurals>
+    <plurals name="dirty_blocklist_count">
+        <item quantity="other">%d intrări din lista blocărilor</item>
+        <item quantity="one">%d intrare din lista blocărilor</item>
+    </plurals>
 </resources>
