--- a/Romanian/main/Contacts.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/plurals.xml
@@ -131,6 +131,10 @@
         <item quantity="other">%1$d persoane</item>
         <item quantity="one">%1$d persoană</item>
      </plurals>
+    <plurals name="livetalk_unit">
+        <item quantity="other">Minute</item>
+        <item quantity="one">Minut</item>
+    </plurals>
     <plurals name="callNoAnswerTimeFormat">
         <item quantity="other">A sunat de %d ori</item>
         <item quantity="one">A sunat %d dată</item>
