--- a/Romanian/main/EngineerMode.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/EngineerMode.apk/res/values-ro/arrays.xml
@@ -632,6 +632,9 @@ HSPA+ pornit"</item>
         <item>EMM</item>
         <item>MMDC</item>
         <item>EL1</item>
+        <item>TDD TAS</item>
+        <item>GSM TAS</item>
+        <item>WCDMA TAS</item>
     </string-array>
     <string-array name="ct_network_selection">
         <item>Mod Global</item>
