--- a/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
@@ -38,7 +38,7 @@
         <item>Alarma va suna peste %3$s.</item>
         <item>Alarma va suna peste %1$s și %3$s.</item>
         <item>Alarma va suna peste %2$s și %3$s.</item>
-        <item>Alarma va suna peste %1$s, %2$s, și %3$s.</item>
+        <item>Alarma va suna peste %1$s, %2$s și %3$s.</item>
     </string-array>
     <string-array name="snooze_duration_entries">
         <item>1 minut</item>
