--- a/Romanian/main/CleanMaster.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/arrays.xml
@@ -24,9 +24,9 @@
         <item>1 GB</item>
      </string-array>
     <string-array name="auto_process_mode">
-         <item>Se afişează</item>
-         <item>Nu se afişează</item>
-         <item>Se afişează după curățare</item>
+         <item>Doar notificare</item>
+         <item>Curățare automată</item>
+         <item>Curățare și notificare</item>
      </string-array>
     <string-array name="cache_clean_menu">
         <item>Curăţare fișier</item>
