--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -51,4 +51,14 @@
         <item>Praf</item>
         <item>Ceaţă</item>
      </string-array>
+    <string-array name="editing_mode_entries">
+        <item>Teme</item>
+        <item>Obiecte widget</item>
+        <item>Imagini de fundal</item>
+        <item>Efecte</item>
+        <item>Celule ecran</item>
+    </string-array>
+    <string-array name="quality_business_devices">
+        <item>Litiu</item>
+    </string-array>
 </resources>
