--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -241,12 +241,8 @@
         <item quantity="many">videoclipuri</item>
     </plurals>
     <plurals name="video_count">
-        <item quantity="other">%1$s videoclipuri</item>
-        <item quantity="zero">%1$s videoclipuri</item>
-        <item quantity="one">%1$s videoclip</item>
-        <item quantity="two">%1$s videoclipuri</item>
-        <item quantity="few">%1$s videoclipuri</item>
-        <item quantity="many">%1$s videoclipuri</item>
+        <item quantity="other">&lt;font color=#fc7050>%d&lt;/font> videoclipuri</item>
+        <item quantity="one">&lt;font color=#fc7050>%d&lt;/font> videoclip</item>
     </plurals>
     <plurals name="number_of_comment_flow">
         <item quantity="other">%1$s comentarii</item>
@@ -283,5 +279,9 @@
     <plurals name="video_publish_watchable_hint">
         <item quantity="other">Atrageți încă %1$d urmăritori pentru a vă crește statutul​</item>
         <item quantity="one">Atrageți încă %1$d urmăritor pentru a vă crește statutul​</item>
+    </plurals>
+    <plurals name="follow_count">
+        <item quantity="other">&lt;font color=#fc7050>%d&lt;/font> urmăritori</item>
+        <item quantity="one">&lt;font color=#fc7050>%d&lt;/font> urmăritor</item>
     </plurals>
 </resources>
