--- a/Romanian/main/PackageInstaller.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/PackageInstaller.apk/res/values-ro/plurals.xml
@@ -3,5 +3,6 @@
     <plurals name="additional_permissions_more">
         <item quantity="other">Încă %1$d</item>
         <item quantity="one">Încă %1$d</item>
+        <item quantity="few">Încă %1$d</item>
     </plurals>
 </resources>
