--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -56,7 +56,7 @@
         <item>Obiecte widget</item>
         <item>Imagini de fundal</item>
         <item>Efecte</item>
-        <item>Celule ecran</item>
+        <item>Dispunere</item>
     </string-array>
     <string-array name="quality_business_devices">
         <item>Litiu</item>
