--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -284,4 +284,16 @@
         <item quantity="other">&lt;font color=#fc7050>%d&lt;/font> urmăritori</item>
         <item quantity="one">&lt;font color=#fc7050>%d&lt;/font> urmăritor</item>
     </plurals>
+    <plurals name="video_like_num">
+        <item quantity="other">%1$s aprecieri</item>
+        <item quantity="one">%1$s apreciere</item>
+    </plurals>
+    <plurals name="gems">
+    <item quantity="other">%1$s bijuterii</item>
+    <item quantity="one">%1$s bijuterie</item>
+    </plurals>
+    <plurals name="more_gems">
+        <item quantity="other">Colectați &lt;font color=#fc7050>&lt;b>%d&lt;/b>&lt;/font> mai multe bijuterii pentru a participa la tombolă</item>
+        <item quantity="one">Colectați &lt;font color=#fc7050>&lt;b>%d&lt;/b>&lt;/font> mai multe bijuterii pentru a participa la tombolă</item>
+    </plurals>
 </resources>
