--- a/Romanian/main/Browser.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/plurals.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="adblock_rules_number_text">
+        <item quantity="other">%d elemente blocate</item>
+        <item quantity="one">%d element blocat</item>
+    </plurals>
+    <plurals name="find_on_page_matches">
+        <item quantity="other">%d potriviri</item>
+        <item quantity="one">%d potrivire</item>
+    </plurals>
     <plurals name="last_num_days">
         <item quantity="other">Ultimele %d zile</item>
     </plurals>
@@ -11,32 +19,24 @@
         <item quantity="other">%1$d selectate</item>
         <item quantity="one">%1$d selectat</item>
     </plurals>
-	<plurals name="video_download_clear_prompt">
-        <item quantity="other">Ștergeți %1$d videoclipuri?</item>
-        <item quantity="one">Ștergeți %1$d videoclip?</item>
-    </plurals>
     <plurals name="video_download_clear_info">
         <item quantity="other">%1$d videoclipuri eliminate.</item>
         <item quantity="one">%1$d videoclip eliminat.</item>
     </plurals>
-    <plurals name="video_subtitle_last_message">
-        <item quantity="other">%d minute rămase</item>
-        <item quantity="one">1 minut rămas</item>
-    </plurals>
-    <plurals name="video_history_clear_prompt">
-        <item quantity="other">Ștergeți %1$d elemente din istoric?</item>
-        <item quantity="one">Ștergeți %1$d element din istoric?</item>
+    <plurals name="video_download_clear_prompt">
+        <item quantity="other">Eliminați %1$d videoclipuri?</item>
+        <item quantity="one">Eliminați %1$d videoclip?</item>
     </plurals>
     <plurals name="video_history_clear_info">
         <item quantity="other">%1$d elemente șterse din istoric.</item>
         <item quantity="one">%1$d element șters din istoric.</item>
     </plurals>
-    <plurals name="find_on_page_matches">
-        <item quantity="other">%d potriviri</item>
-        <item quantity="one">%d potrivire</item>
+    <plurals name="video_history_clear_prompt">
+        <item quantity="other">Ștergeți %1$d elemente din istoric?</item>
+        <item quantity="one">Ștergeți %1$d element din istoric?</item>
     </plurals>
-    <plurals name="adblock_rules_number_text">
-        <item quantity="other">%d elemente blocate</item>
-        <item quantity="one">%d element blocat</item>
+    <plurals name="video_subtitle_last_message">
+        <item quantity="other">%d minute rămase</item>
+        <item quantity="one">1 minut rămas</item>
     </plurals>
 </resources>
