--- a/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="reminder_methods_labels">
-        <item>Notificare</item>
-        <item>E-mail</item>
-        <item>SMS</item>
-        <item>Alarmă</item>
-     </string-array>
    <string-array name="preferences_week_start_day_labels">
         <item>Codul local prestabilit</item>
         <item>Sâmbătă</item>
@@ -98,16 +92,6 @@
         <item>Fiji</item>
         <item>Tonga</item>
      </string-array>
-    <string-array name="availability">
-        <item>Ocupat</item>
-        <item>Disponibil</item>
-        <item>Tentativă</item>
-     </string-array>
-    <string-array name="visibility">
-        <item>Prestabilit</item>
-        <item>Privat</item>
-        <item>Public</item>
-     </string-array>
     <string-array name="ordinal_labels">
         <item>prima</item>
         <item>a doua</item>
@@ -140,18 +124,11 @@
         <item>[Abonare] pentru funcțiile calendar personalizate și servicii</item>
         <item>[Abonare] a găsit o diferite caracteristici și servicii calendar</item>
     </string-array>
-    <string-array name="quick_response_defaults">
-        <item>Întârzii numai câteva minute.</item>
-        <item>Ajung în aproximativ 10 minute.</item>
-        <item>Începeţi fără mine.</item>
-        <item>Îmi pare rău, nu pot să ajung. Va trebui să ne vedem altădată.</item>
-     </string-array>
     <string-array name="widget_style_list">
         <item>Transparent</item>
         <item>Fundal alb</item>
      </string-array>
-    <string-array name="miui_reminder_minutes_labels">
-        <item>Niciun memento</item>
+    <string-array name="default_reminder_labels">
         <item>La momentul evenimentului</item>
         <item>Cu 5 minute înainte de eveniment</item>
         <item>Cu 10 minute înainte de eveniment</item>
@@ -162,17 +139,10 @@
         <item>Cu 2 zile înainte de eveniment</item>
         <item>Cu o săptămână înainte de eveniment</item>
     </string-array>
-    <string-array name="miui_preferences_default_reminder_labels">
-        <item>Niciun memento</item>
-        <item>La momentul evenimentului</item>
-        <item>cu 5 minute înainte</item>
-        <item>cu 10 minute înainte</item>
-        <item>cu 15 minute înainte</item>
-        <item>cu 30 de minute înainte</item>
-        <item>cu o oră înainte</item>
-        <item>cu o zi înainte</item>
-        <item>cu 2 zile înainte</item>
-        <item>cu o săptămână înainte</item>
+    <string-array name="prefEntries_alerts_vibrateWhen">
+        <item>Întotdeauna</item>
+        <item>Doar în modul Silențios</item>
+        <item>Niciodată</item>
     </string-array>
     <string-array name="travel_reminder_minutes_labels">
         <item>cu 3 ore înainte</item>
@@ -265,10 +235,5 @@
         <item>Niciodată</item>
         <item>Timp</item>
         <item>Frecvenţă</item>
-     </string-array>
-    <string-array name="prefEntries_alerts_vibrateWhen">
-        <item>Mereu</item>
-        <item>Doar în modul silenţios</item>
-        <item>Niciodată</item>
      </string-array>
 </resources>
